<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Indian Messenger</string>
    <string name="FACEBOOK_APP_ID" translatable="false"></string>
    <string name="notification_channel_id" translatable="false">hiddy_notification_channel</string>
    <string name="notification_channel_foreground_service" translatable="false">hiddy_notification_channel_foreground_service</string>
    <string name="notification_call_id" translatable="false">hiddy_incoming_call</string>
    <string name="alert_delete_comment">Confirm delete?</string>
    <string name="network_failure">Sorry! Not connected to internet</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="alert_delete_chat_yes">Delete</string>
    <string name="invitefriends">Invite Friends</string>
    <string name="mychannels">My Channels</string>
    <string name="enter_pass">Enter Password</string>
    <string name="first_time_pass">*Set password for the secret chats for the first time.</string>
    <string name="enter_pass_tag">*Enter password to see secret chats.</string>
    <string name="reset_pass_tag">*Enter answer to reset password</string>
    <string name="chat_is_locked_tag">*Enter the password to unlock chat</string>
    <string name="chat_is_locked">This chat is secret &amp; locked</string>
    <string name="ran_chats">Random Chats</string>
    <string name="note_self">Note to Self</string>
    <string name="ran_chat_set">Random Chat Settings</string>
    <string name="enable_random_chats">Enable Random Chats</string>
    <string name="disable_random_chats">Disable Random Chats</string>
    <string name="reset_pass">Reset Password</string>
    <string name="reset_pass_tag_new">*Reset password and security question</string>
    <string name="accountsettings">Account Settings</string>
    <string name="help">Help</string>
    <string name="lc_contact">Secret Chats</string>
    <string name="set_new_password">Set New Password</string>
    <string name="sel_sec_quest">Select a security question</string>
    <string name="theme">Theme</string>
    <string name="choose_theme">Select Theme</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>
    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>
    <string name="profileinfo">Profile Info</string>
    <string name="name">Name</string>
    <string name="pleasewait">Please Wait..</string>
    <string name="profileinfodetail">Please provide your name and an\nOptional profile photo</string>
    <string name="editprofileinfo">Edit your Name, Mood\nAnd Profile Picture</string>
    <string name="whats_in_ur_mind">What\'s in your Mind?</string>
    <string name="updated_successfully">Updated successfully</string>
    <string name="select_contact">Select Contact</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="online">Online</string>
    <string name="last_seen">Last seen</string>
    <string name="typing">typing..</string>
    <string name="downloaded">Downloaded</string>
    <string name="no_application">No application found to open this file</string>
    <string name="im_sure">I\'m Sure</string>
    <string name="nope">Nope</string>
    <string name="really_delete_chat_history">Do you really want to Delete this chat history?</string>
    <string name="really_delete_chat">Do you really want to Delete this chat?</string>
    <string name="really_block_chat">Do you really want to Block this person?</string>
    <string name="mute_notification">Mute Notification</string>
    <string name="unmute_notification">Unmute Notification</string>
    <string name="block">Block</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="unblock">Unblock</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="title_activity_profile_info">ProfileInfo</string>
    <string name="pick_image_intent_text">Choose an image</string>
    <string name="something_wrong">Something Went Wrong</string>
    <string name="continuekey">Connect</string>
    <string name="welcome_title1">Channel</string>
    <string name="welcome_title2">Favourites</string>
    <string name="welcome_title3">Audio Video Call</string>
    <string name="welcome_des1">Be Unique, Discover yourself and make others discover you by creating your own channel.</string>
    <string name="welcome_des2">Favorite your loved ones which will be available on the top of the chat.</string>
    <string name="welcome_des3">Be in Touch with your friends always by making audio and video chats.</string>
    <string name="save">save</string>
    <string name="privacy">Privacy</string>
    <string name="change_number">Change Number</string>
    <string name="delete_account">Delete Account</string>
    <string name="app_language">App Language</string>
    <string name="english" translatable="false">English</string>
    <string name="messaging">Messaging</string>
    <string name="my_contacts">My Contacts</string>
    <string name="wait_pb">Wait..Enabling RandomChat</string>
    <string name="wait_pb2">Wait..Disabling RandomChat</string>
    <string name="about">About</string>
    <string name="next">Next</string>
    <string name="sel_dob">Please select your DOB</string>
    <string name="sel_gen">Please select your gender</string>
    <string name="blocked_contacts">Blocked Contacts</string>
    <string name="list_of_contacts_that_you_have_blocked">List of contacts that you have blocked</string>
    <string name="read_receipts">Read Receipts</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="everyone">Everyone</string>
    <string name="who_can_see_my_personal_info">Who Can See My Personal Info</string>
    <string name="nobody">Nobody</string>
    <string name="account">Account</string>
    <string name="status">Status</string>
    <string name="user_name">User Name</string>
    <string name="mobile">Mobile</string>
    <string name="mute_notifications">Mute Notifications</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="select_language">Select language</string>
    <string name="french" translatable="false">Française</string>
    <string name="Arabic" translatable="false">عربى</string>
    <string name="logout">Logout</string>
    <string name="do_you_want_to_logout">Do you want to Logout?</string>
    <string name="chat">Chat</string>
    <string name="group">Group</string>
    <string name="calls">Calls</string>
    <string name="yesterday">Yesterday</string>
    <string name="refresh">Refresh</string>
    <string name="view_and_edit">View and Edit</string>
    <string name="add_contact">Add Contact</string>
    <string name="about_blank">About should not be blank</string>
    <string name="really_unblock_chat">Do you really want to Unblock this person?</string>
    <string name="create_group">Create Group</string>
    <string name="selected">selected</string>
    <string name="of">of</string>
    <string name="add_peoples">Add Peoples</string>
    <string name="participation">Participation</string>
    <string name="name_your_group">Name Your Group</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="select_atleast_one_members">Atleast add one participant in group</string>
    <string name="please_enter_your_new_country_code_and_phone_number">Please Enter Your New Country Code and Phone Number</string>
    <string name="created_at">Created at</string>
    <string name="shared_media">Shared Media</string>
    <string name="view_all">View All</string>
    <string name="group_events">Group Events</string>
    <string name="admin">Admin</string>
    <string name="participants">Participants</string>
    <string name="add">Add</string>
    <string name="created_by">Created by</string>
    <string name="no_recent">No Recent Chat</string>
    <string name="no_media">No media found</string>
    <string name="unblock_message">Unblock this person to start a chat</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="wrong_pass">Wrong password</string>
    <string name="wrong_ans">Wrong answer</string>
    <string name="hint_new_password">Enter new password here</string>
    <string name="hint_password">Enter password here</string>
    <string name="hint_ans">Enter answer here</string>
    <string name="pass_err">Password must be 4 character long.</string>
    <string name="ans_err">Please enter a valid answer.</string>
    <string name="at">at</string>
    <string name="remove">Remove</string>
    <string name="make_group_admin">Make Group Admin</string>
    <string name="view">View</string>
    <string name="message">Message</string>
    <string name="make">Make</string>
    <string name="as_admin">as Admin</string>
    <string name="you">You</string>
    <string name="from_admin">from Admin</string>
    <string name="delete_group">Delete Group</string>
    <string name="exit_group">Exit Group</string>
    <string name="edit_group">Edit Group</string>
    <string name="enter_new_subject">Enter New Subject</string>
    <string name="offline">offline</string>
    <string name="really_exit_group">Do you really want to Exit this group?</string>
    <string name="not_group_member">You are no longer member in this group</string>
    <string name="ringing">Ringing...</string>
    <string name="audio_calling">Audio Calling</string>
    <string name="video_calling">Video Calling</string>
    <string name="exit_channel">Exit Channel</string>
    <string name="mute">Mute</string>
    <string name="name_your_channel">Name your Channel</string>
    <string name="description">Description</string>
    <string name="channel_type">Channel Type</string>
    <string name="private_string">Private</string>
    <string name="public_string">Public</string>
    <string name="public_channel_des">Public Channels Can Be Found in Search. Anyone Can Join Them</string>
    <string name="privact_channels_can_only_be_joined_via_invite_link">Privact Channels Can Only be joined via invite link</string>
    <string name="create_channel">Create Channel</string>
    <string name="successfully_created">Successfully Created</string>
    <string name="no_group_yet_buddy">No Group Yet Buddy!</string>
    <string name="terms">Terms</string>
    <string name="partnerKey">6uM0Jcd516f41576c4959aa13418bce3229a1</string>
    <string name="tour_welcome_title_walk">"Welcome\nTo\nIndian Messenger"</string>
    <string name="no_channels_yet_buddy">No Channels Yet Buddy!</string>
    <string name="shareToWhatsApp">Share to WhatsApp status</string>
    <string name="recents">Recents</string>
    <string name="your_status">Your status</string>
</resources>