<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/no_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e3e3e1"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/set_new_password"
        android:textColor="#252525"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordLayout"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false"
        app:errorEnabled="false"
        android:background="@drawable/alert_edit_back"
        android:layout_marginTop="16dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et1"

        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="wrap_content"

        android:background="@null"
        android:hint="@string/hint_new_password"
        android:minHeight="44dp"
        android:padding="8dp"
        android:textColor="#252525"
        android:textSize="14sp"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/quest"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/alert_edit_back"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/sel_sec_quest"
        android:textColor="#252525"
        android:textSize="14sp"
        android:typeface="sans"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordLayout" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/alert_edit_back"
        android:hint="@string/hint_ans"
        android:minHeight="44dp"
        android:padding="8dp"
        android:textColor="#252525"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/quest" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forgot_password"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:visibility="gone"
        android:layout_marginEnd="8dp"
        android:text="@string/forgot_pass"
        android:background="@null"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et2" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/accept"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password" />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/accept"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/submit"
        app:layout_constraintLeft_toRightOf="@+id/cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:lineSpacingMultiplier="1.2"
        android:layout_marginTop="16dp"
        android:text="@string/first_time_pass"
        android:textColor="#515151"
        android:textSize="14sp"
        android:id="@+id/tag"
        android:typeface="sans"
        app:layout_constraintTop_toBottomOf="@+id/cancel" />
</androidx.constraintlayout.widget.ConstraintLayout>