<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/favtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_regular"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingEnd="15dp"
        android:singleLine="true"
        android:text="@string/status"
        android:textColor="@color/secondarytext"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollLay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/favtitle"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/addStoryLay"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="vertical"
                android:padding="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/favtitle">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/userImage"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/temp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="40dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/add" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="3dp"
                    android:fontFamily="@font/font_regular"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@string/your_status"
                    android:textColor="@color/primarytext"
                    android:textSize="15dp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/favrecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:layout_editor_absoluteY="246dp" />

        </LinearLayout>

    </HorizontalScrollView>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.4dp"
        android:visibility="gone"
        android:background="@color/divider" />

    <TextView
        android:id="@+id/recenttitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/horizontalScrollLay"
        android:fontFamily="@font/font_regular"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:singleLine="true"
        android:text="@string/recents"
        android:textColor="@color/secondarytext"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintTop_toBottomOf="@+id/view" />

</RelativeLayout>